--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tilecache (r391~c2c-git20090901) unstable; urgency=low
+
+  * Use image-merge when available.
+    (http://github.com/spasche/image-merge/tree/master)
+
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Tue, 01 Sep 2009 08:11:17 +0200
+
 tilecache (r391~c2c-git20090826) unstable; urgency=low
 
   * Use git sources from http://github.com/fredj/tilecache/tree/master
