--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+tilecache (r391~c2c-git20090909) unstable; urgency=low
+
+  * code refactoring.
+  * AWSS3: 
+    * set the policy to all the tiles
+    * set the cache-control HTTP header
+
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Wed, 09 Sep 2009 09:22:08 +0200
+
 tilecache (r391~c2c-git20090901) unstable; urgency=low
 
   * Use image-merge when available.
