--- a/tilecache/docs/TODO.txt
+++ b/tilecache/docs/TODO.txt
@@ -3,3 +3,6 @@
  * TileCache.Services.WMS, convert the file format if needed (with IE, the user
    will request the file as image/gif)
  * [done] move the ImageMerger classes into TileCache.Utils
+ * Add a post-render-tile hook (can be used to optimize png files)
+ * TileCache.Caches.AWSS3: add a local disk cache. should take the max-age into account.
+   maybe a LRU with a max size or max object count.
