--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+tilecache (r391~c2c2-git20091007) lenny; urgency=low
+
+  * pack the coordinates and store them into a deque
+
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 05 Oct 2009 12:22:17 +0200
+
+tilecache (r391~c2c2-git20091006) lenny; urgency=low
+
+  * undo numpy update: "[x, y, z] in numpy.array" do not works.
+
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 05 Oct 2009 11:46:46 +0200
+
 tilecache (r391~c2c2-git20091005) lenny; urgency=low
 
   * use numpy for faster array manipulation.
