handle disk like requests (from OpenLayers.Layer.TileCache)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-tilecache (r391~c2c2-git20091009) lenny; urgency=low
+tilecache (r391~c2c2-git20091013) lenny; urgency=low
 
+  * NOT RELEASED
   * back to the plain old dict for the already-generated-tiles structure.
+  * handle "disk like" requests (from OpenLayers.Layer.TileCache).
 
- -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 05 Oct 2009 15:17:41 +0200
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Tue, 13 Oct 2009 09:35:21 +0200
 
 tilecache (r391~c2c2-git20091008) lenny; urgency=low
 
