--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tilecache (r391~c2c2-git20091014) lenny; urgency=low
+
+  * NOT RELEASED
+  * Seed: use the TileCache.Layers.MapServer.mapObj attribute
+
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 26 Oct 2009 15:00:20 +0100
+
 tilecache (r391~c2c2-git20091013) lenny; urgency=low
 
   * back to the plain old dict for the already-generated-tiles structure.
