--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
 tilecache (r391~c2c2-git20091014) lenny; urgency=low
 
   * NOT RELEASED
-  * Seed: use the TileCache.Layers.MapServer.mapObj attribute
+  * Seed: use the TileCache.Layers.MapServer.mapObj attribute.
+  * tilecache_seed: shell-style wildcards can be used for the layer name.
+  * tilecache_seed: if no levels are given, generate all.
 
- -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 26 Oct 2009 15:00:20 +0100
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Tue, 27 Oct 2009 11:37:36 +0100
 
 tilecache (r391~c2c2-git20091013) lenny; urgency=low
 
