--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
-tilecache (r391~c2c2-git20091029) lenny; urgency=low
+tilecache (r391~c2c2-git20091130) lenny; urgency=low
 
-  * NOT RELEASED
+  * mod_python: use the correct path_info when the request is redirected.
+
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 30 Nov 2009 10:16:09 +0100
+
+tilecache (r391~c2c2-git20091030) lenny; urgency=low
+
   * the Test cache is never readonly.
 
- -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 30 Oct 2009 10:31:25 +0100
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 30 Oct 2009 11:06:56 +0100
 
 tilecache (r391~c2c2-git20091028) lenny; urgency=low
 
