ImageMergeMerger: don't crash if all the image to merge are empty.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+tilecache (r391~c2c2-git20100203) lenny; urgency=low
+
+  * ImageMergeMerger: don't crash if all the image to merge are empty.
+
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 01 Feb 2010 16:49:13 +0100
+
+tilecache (r391~c2c2-git20100202) lenny; urgency=low
+
+  * Fix indentation error.
+
+ -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 01 Feb 2010 12:36:40 +0100
+
 tilecache (r391~c2c2-git20100201) lenny; urgency=low
 
   * Alpha compose in image merger.
