--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tilecache (r391~c2c) lenny; urgency=low
+tilecache (2.11.1~c2c+1) lenny squeeze luci
 
   * Add multi-porjection support in features aware mode.
 
