--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tilecache (2.11.1~c2c+1) lenny; urgency=low
+tilecache (2.11.1~c2c+lenny1) lenny; urgency=low
 
   * Add multi-porjection support in features aware mode.
 
